# nano-bank

./: .gitignore  LICENSE  README.md  run.md  setup-k8s.sh  start-nano-bank.sh  stop-nano-bank.sh
api/: Cargo.toml  test_db.rs
api/config/: default.toml
api/src/: main.rs
api/src/config/: database.rs  mod.rs
api/src/errors/: mod.rs
api/src/handlers/: accounts.rs  auth.rs  customers.rs  docs.rs  health.rs  mod.rs  security.rs  transactions.rs
api/src/middleware/: mod.rs
api/src/models/: account.rs  customer.rs  mod.rs  security.rs  transaction.rs
api/src/repositories/: mod.rs
api/src/services/: mod.rs
api/src/utils/: mod.rs
k8s/: README.md  deploy.sh  init-db-job.yaml  kind-cluster-config.yaml  postgres-configmap.yaml  postgres-deployment.yaml  postgres-namespace.yaml  postgres-pvc.yaml  postgres-secret.yaml  postgres-service.yaml
src/core/tables/: 00_init.sql  01_enums.sql  02_customers.sql  03_accounts.sql  04_transactions.sql  05_security.sql  06_triggers.sql  README.md
