[package]
name = "nano-bank-api"
version = "0.1.0"
edition = "2021"
authors = ["Nano Bank Team"]
description = "Challenger bank core API backend"

[dependencies]
# Web Framework & HTTP
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-br", "compression-gzip", "timeout"] }
hyper = { version = "1.0", features = ["full"] }

# Async Runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Security & Authentication
jsonwebtoken = "9.0"
argon2 = "0.5"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Financial Math (Precise Decimal Arithmetic)
rust_decimal = { version = "1.0", features = ["serde-with-str"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Environment
once_cell = "1.0"

[dev-dependencies]
# Testing
tokio-test = "0.4"
tower-test = "0.4"
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
# Production optimizations for banking performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Development optimizations
opt-level = 0
debug = true
overflow-checks = true
